targetClass.newInstance()をtargetClass.getDeclaredConstructor().newInstance()に変更